@@ -42,11 +42,6 @@ case $machine in
         fixincludes=fixinc.svr4
         ;;
 
-    i?86-*-interix* | \
-    alpha-*-interix*)
-        fixincludes=fixinc.interix
-        ;;
-
     i?86-*-openbsd*)
         fixincludes=fixinc.wrap
         ;;
@@ -73,6 +68,7 @@ case $machine in
     i?86-*-cygwin* | \
     i?86-*-mingw32* | \
     i?86-*-uwin* | \
+    i?86-*-interix* | \
     powerpc-*-eabiaix* | \
     powerpc-*-eabisim* | \
     powerpc-*-eabi*    | \
