@@ -1,3 +1,9 @@
+2003-07-11  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* fixinc/mkfixinc.sh: Drop reference to unsupported alpha-*-interix*.
+	Move i?86-*-interix* to the don't-fix list.
+	* fixinc/fixinc.interix: Delete with extreme prejudice.
+
 2003-07-10  Dara Hazeghi  <dhazeghi@yahoo.com>
 
 	PR bootstrap/10758
